--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Iron Dillo Security</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IronDillo Cybersecurity</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #1e1e1e;
+      color: #f1f1f1;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+    h1 {
+      font-size: 3em;
+      color: #00ffc3;
+    }
+    p {
+      font-size: 1.2em;
+      max-width: 600px;
+    }
+    a {
+      color: #00ffc3;
+      text-decoration: none;
+    }
+    .links {
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Iron Dillo</h1>
-  <p>This site is under construction. Cybersecurity consulting services coming soon.</p>
+  <h1>IronDillo Cybersecurity</h1>
+  <p>Veteran-owned. Digital defense with Texas grit.<br>
+     Site launch incoming. Meanwhile, find me here:</p>
+
+  <div class="links">
+    <p>
+      <a href="https://www.fiverr.com/yourusername" target="_blank">Fiverr</a> |
+      <a href="https://ko-fi.com/yourusername" target="_blank">Ko-fi</a> |
+      <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
+    </p>
+  </div>
 </body>
 </html>
 
