--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
   <div class="links">
     <p>
-      <a href="https://www.fiverr.com/yourusername" target="_blank">Fiverr</a> |
-      <a href="https://ko-fi.com/yourusername" target="_blank">Ko-fi</a> |
+      <a href="https://https://www.fiverr.com/s/42k2gZR" target="_blank">Fiverr</a> |
+      <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a> |
       <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
     </p>
   </div>
