--- a/index.html
+++ b/index.html
@@ -6,47 +6,53 @@
   <title>IronDillo Cybersecurity</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      background: #1e1e1e;
-      color: #f1f1f1;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
+      background-color: #0e0e0e;
+      color: #f4f4f4;
+      font-family: Arial, sans-serif;
       text-align: center;
+      padding: 2rem;
     }
     h1 {
-      font-size: 3em;
+      font-size: 3rem;
       color: #00ffc3;
     }
-    p {
-      font-size: 1.2em;
-      max-width: 600px;
+    h2 {
+      color: #ccc;
+      margin-top: -1rem;
+      font-weight: 400;
     }
-    a {
+    p {
+      max-width: 700px;
+      margin: 1rem auto;
+      font-size: 1.1rem;
+    }
+    .links a {
+      margin: 0 1rem;
       color: #00ffc3;
       text-decoration: none;
     }
-    .links {
+    .cta {
       margin-top: 2rem;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>IronDillo Cybersecurity</h1>
-  <p>Veteran-owned. Digital defense with Texas grit.<br>
-     Site launch incoming. Meanwhile, find me here:</p>
+  <h2>Digital Defense with Texas Grit</h2>
+
+  <p>Welcome to IronDillo—your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.</p>
+
+  <p>Whether you're securing your first website or auditing vulnerabilities, IronDillo brings expert-level insight with a no-BS attitude.</p>
 
   <div class="links">
-    <p>
-      <a href="https://www.fiverr.com/s/Artilleryjoe" target="_blank">Fiverr</a> |
-      <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a> |
-      <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
-    </p>
+    <a href="https://www.fiverr.com/YOURUSERNAME" target="_blank">Fiverr</a>
+    <a href="https://ko-fi.com/YOURUSERNAME" target="_blank">Ko-fi</a>
+    <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
+  </div>
+
+  <div class="cta">
+    <p>🔒 Currently accepting new clients.<br>Get in touch or request a quote via Fiverr or Ko-fi.</p>
   </div>
 </body>
 </html>
-
