--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <div class="links">
     <a href="https://www.fiverr.com/YOURUSERNAME" target="_blank">Fiverr</a>
-    <a href="https://ko-fi.com/YOURUSERNAME" target="_blank">Ko-fi</a>
+    <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a>
     <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
   </div>
 
