--- a/index.html
+++ b/index.html
@@ -37,6 +37,40 @@
     }
   </style>
 </head>
+
+  <hr style="margin: 3rem 0;">
+
+<h2>Contact Me</h2>
+<p>Use the form below to send a secure message. No spam, no leaks.</p>
+
+<form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
+  <input type="text" name="name" placeholder="Your name" required><br><br>
+  <input type="email" name="email" placeholder="Your email" required><br><br>
+  <textarea name="message" placeholder="Your message" rows="5" required></textarea><br><br>
+  <button type="submit">Send Message</button>
+</form>
+
+<style>
+  input, textarea {
+    width: 90%;
+    max-width: 500px;
+    padding: 0.7rem;
+    margin: 0.5rem 0;
+    border: none;
+    border-radius: 5px;
+  }
+  button {
+    padding: 0.7rem 1.5rem;
+    background: #00ffc3;
+    border: none;
+    color: #000;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+</style>
+
+  
 <body>
   <h1>IronDillo Cybersecurity</h1>
   <h2>Digital Defense with Texas Grit</h2>
