--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h2>Contact Me</h2>
 <p>Use the form below to send a secure message. No spam, no leaks.</p>
 
-<form action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST">
+<form action="https://formspree.io/f/xldnbpdg" method="POST">
   <input type="text" name="name" placeholder="Your name" required><br><br>
   <input type="email" name="email" placeholder="Your email" required><br><br>
   <textarea name="message" placeholder="Your message" rows="5" required></textarea><br><br>
