--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <h1>IronDillo Cybersecurity</h1>
   <h2>Digital Defense with Texas Grit</h2>
 
-  <p>Welcome to IronDillo—your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.</p>
+  <p>Welcome to IronDillo! Your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.</p>
 
   <p>Whether you're securing your first website or auditing vulnerabilities, IronDillo brings expert-level insight with a no-BS attitude.</p>
 
