--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <p>Welcome to IronDillo! Your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.</p>
 
-  <p>Whether you're securing your first website or auditing vulnerabilities, IronDillo brings expert-level insight with a no-BS attitude.</p>
+  <p>Whether you're securing your first website or assessing for vulnerabilities, IronDillo brings expert guidance with integrity, clarity, and care. Veteran-owned, mission-driven, and here to help you build safer digital ground.</p>
 
   <div class="links">
     <a href="https://www.fiverr.com/artilleryjoe" target="_blank">Fiverr</a>
