--- a/services.html
+++ b/services.html
@@ -45,19 +45,19 @@
   <div class="service">
     <h2>Cybersecurity Consulting</h2>
     <p>Personalized guidance on securing your systems, avoiding threats, and understanding risk. Ideal for first-time site owners or small teams without a dedicated IT department.</p>
-    <p class="cta"><a href="https://fiverr.com/YOURUSERNAME" target="_blank">Start a Consultation →</a></p>
+    <p class="cta"><a href="https://fiverr.com/artilleryjoe" target="_blank">Start a Consultation →</a></p>
   </div>
 
   <div class="service">
     <h2>Technical Documentation</h2>
     <p>Need clear and concise how-tos, runbooks, or SOPs? I specialize in turning complex technical topics into readable, usable docs for teams or clients.</p>
-    <p class="cta"><a href="https://fiverr.com/YOURUSERNAME" target="_blank">Request Documentation Help →</a></p>
+    <p class="cta"><a href="https://fiverr.com/artilleryjoe" target="_blank">Request Documentation Help →</a></p>
   </div>
 
   <div class="service">
     <h2>Secure Setup & Diagnostics</h2>
     <p>System acting up? Need help hardening your devices or reviewing configurations? I provide secure setups, basic audits, and actionable insights.</p>
-    <p class="cta"><a href="https://ko-fi.com/YOURUSERNAME" target="_blank">Quick Fix / Review →</a></p>
+    <p class="cta"><a href="https://ko-fi.com/kris98630" target="_blank">Quick Fix / Review →</a></p>
   </div>
 
 </body>
