--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 </head>
 
 <body>
+  <nav style="background:#111;padding:1rem 0;">
+  <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
+  <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
+  <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
+  <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
+</nav>
+
   <h1>IronDillo Cybersecurity</h1>
   <h2>Digital Defense with Texas Grit</h2>
 
