--- a/about.html
+++ b/about.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="UTF-8"><title>About – IronDillo</title></head>
+<body>
+  <nav style="background:#111;padding:1rem 0;">
+  <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
+  <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
+  <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
+  <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
+</nav>
+  <h1>About IronDillo</h1>
+  <p>Veteran-founded cybersecurity consulting focused on integrity, clarity, and digital defense. This space will tell the full story soon.</p>
+</body>
+</html>
 
