--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head><meta charset="UTF-8"><title>Blog – IronDillo</title></head>
+<body>
+  <nav style="background:#111;padding:1rem 0;">
+  <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
+  <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
+  <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
+  <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
+</nav>
+  <h1>Coming Soon: Blog & Resources</h1>
+  <p>Cyber hygiene tips, threat breakdowns, and small-biz guides will live here.</p>
+</body>
+</html>
