--- a/services.html
+++ b/services.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
+<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
+<meta name="author" content="Kristopher McCoy">
+
+<meta property="og:title" content="IronDillo Cybersecurity">
+<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
+<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
+<meta property="og:url" content="https://irondillo.com">
+<meta name="twitter:card" content="summary_large_image">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services – IronDillo</title>
