--- a/about.html
+++ b/about.html
@@ -35,6 +35,10 @@
 </head>
 <body>
 
+  <header style="text-align:center; padding:1rem;">
+  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
+</header>
+
   <nav style="background:#111;padding:1rem 0;">
     <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
     <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
