--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 <meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
 <meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
 <meta name="author" content="Kristopher McCoy">
