--- a/index.html
+++ b/index.html
@@ -1,6 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
+<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
+<meta name="author" content="Kristopher McCoy">
+
+<meta property="og:title" content="IronDillo Cybersecurity">
+<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
+<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
+<meta property="og:url" content="https://irondillo.com">
+<meta name="twitter:card" content="summary_large_image">
+
+  <meta charset="UTF-8" />
+  <title>About – IronDillo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    body {
+      background: #0e0e0e;
+      color: #f4f4f4;
+      font-family: Arial, sans-serif;
+      padding: 2rem;
+      text-align: center;
+    }
+    h1 {
+      color: #00ffc3;
+      font-size: 2.5rem;
+    }
+    p {
+      max-width: 700px;
+      margin: 1rem auto;
+      font-size: 1.1rem;
+    }
+  </style>
+</head>
+<body>
+
+  <header style="text-align:center; padding:1rem;">
+  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
+</header>
+
+  <nav style="background:#111;padding:1rem 0;">
+    <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
+    <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
+    <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
+    <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
+  </nav>
+
+  <h1>About IronDillo</h1>
+
+  <p><strong>IronDillo</strong> is more than a brand—it's a mission. Founded by a U.S. Army veteran with a passion for cybersecurity, I created IronDillo to help individuals and small businesses stay safe in a complex digital world.</p>
+
+  <p>My goal is to translate technical know-how into real-world protection. Whether you're just getting started or looking to harden your existing systems, I offer straight answers, reliable service, and no fear tactics. Just solid, honest help.</p>
+
+  <p>The armadillo in the name isn't just a mascot—it's a symbol of defense, resilience, and navigating life with a strong shell and a clear purpose. That's what I aim to offer you and your systems, too.</p>
+
+  <p>Thanks for stopping by. If you're ready to roll forward with security, <a href="/services.html" style="color:#00ffc3;">let's talk</a>.</p>
+
+</body>
+</html>
 <meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
 <meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
 <meta name="author" content="Kristopher McCoy">
