--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,21 @@
   <title>About – IronDillo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    @media (max-width: 600px) {
+  body {
+    padding: 1rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  nav a {
+    display: block;
+    margin: 0.5rem 0;
+  }
+  img {
+    max-width: 100px;
+  }
+}
     body {
       background: #0e0e0e;
       color: #f4f4f4;
