--- a/index.html
+++ b/index.html
@@ -1,95 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-<meta name="author" content="Kristopher McCoy">
-
-<meta property="og:title" content="IronDillo Cybersecurity">
-<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-<meta property="og:url" content="https://irondillo.com">
-<meta name="twitter:card" content="summary_large_image">
-
   <meta charset="UTF-8" />
-  <title>About – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    @media (max-width: 600px) {
-  body {
-    padding: 1rem;
-  }
-  h1 {
-    font-size: 2rem;
-  }
-  nav a {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  img {
-    max-width: 100px;
-  }
-}
-    body {
-      background: #0e0e0e;
-      color: #f4f4f4;
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      text-align: center;
-    }
-    h1 {
-      color: #00ffc3;
-      font-size: 2.5rem;
-    }
-    p {
-      max-width: 700px;
-      margin: 1rem auto;
-      font-size: 1.1rem;
-    }
-  </style>
-</head>
-<body>
-
-  <header style="text-align:center; padding:1rem;">
-  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
-</header>
-
-  <nav style="background:#111;padding:1rem 0;">
-    <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
-    <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
-    <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
-    <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
-  </nav>
-
-  <h1>About IronDillo</h1>
-
-  <p><strong>IronDillo</strong> is more than a brand—it's a mission. Founded by a U.S. Army veteran with a passion for cybersecurity, I created IronDillo to help individuals and small businesses stay safe in a complex digital world.</p>
-
-  <p>My goal is to translate technical know-how into real-world protection. Whether you're just getting started or looking to harden your existing systems, I offer straight answers, reliable service, and no fear tactics. Just solid, honest help.</p>
-
-  <p>The armadillo in the name isn't just a mascot—it's a symbol of defense, resilience, and navigating life with a strong shell and a clear purpose. That's what I aim to offer you and your systems, too.</p>
-
-  <p>Thanks for stopping by. If you're ready to roll forward with security, <a href="/services.html" style="color:#00ffc3;">let's talk</a>.</p>
-
-</body>
-</html>
-<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-<meta name="author" content="Kristopher McCoy">
-
-<meta property="og:title" content="IronDillo Cybersecurity">
-<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-<meta property="og:url" content="https://irondillo.com">
-<meta name="twitter:card" content="summary_large_image">
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IronDillo Cybersecurity</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  
+  <!-- SEO Meta -->
+  <meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
+  <meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
+  <meta name="author" content="Kristopher McCoy">
+
+  <!-- Open Graph / Social -->
+  <meta property="og:title" content="IronDillo Cybersecurity">
+  <meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
+  <meta property="og:url" content="https://irondillo.com">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       background-color: #0e0e0e;
@@ -97,6 +25,10 @@
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 2rem;
+    }
+    header img {
+      max-width: 150px;
+      height: auto;
     }
     h1 {
       font-size: 3rem;
@@ -121,22 +53,52 @@
       margin-top: 2rem;
       font-weight: bold;
     }
+    nav {
+      background: #111;
+      padding: 1rem 0;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: #00ffc3;
+      text-decoration: none;
+    }
+    input, textarea {
+      width: 90%;
+      max-width: 500px;
+      padding: 0.7rem;
+      margin: 0.5rem 0;
+      border: none;
+      border-radius: 5px;
+    }
+    button {
+      padding: 0.7rem 1.5rem;
+      background: #00ffc3;
+      border: none;
+      color: #000;
+      font-weight: bold;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      nav a { display: block; margin: 0.5rem 0; }
+      header img { max-width: 100px; }
+    }
   </style>
 </head>
 
 <body>
 
-<header style="text-align:center; padding:1rem;">
-  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
-</header>
+  <header>
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+  </header>
 
-  
-  <nav style="background:#111;padding:1rem 0;">
-  <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
-  <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
-  <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
-  <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
-</nav>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/services.html">Services</a>
+    <a href="/about.html">About</a>
+    <a href="/blog.html">Blog</a>
+  </nav>
 
   <h1>IronDillo Cybersecurity</h1>
   <h2>Digital Defense with Texas Grit</h2>
@@ -154,37 +116,19 @@
   <div class="cta">
     <p>🔒 Currently accepting new clients.<br>Get in touch or request a quote via Fiverr or Ko-fi.</p>
   </div>
-   <hr style="margin: 3rem 0;">
 
-<h2>Contact Me</h2>
-<p>Use the form below to send a secure message. No spam, no leaks.</p>
+  <hr style="margin: 3rem 0;">
 
-<form action="https://formspree.io/f/xldnbpdg" method="POST">
-  <input type="text" name="name" placeholder="Your name" required><br><br>
-  <input type="email" name="email" placeholder="Your email" required><br><br>
-  <textarea name="message" placeholder="Your message" rows="5" required></textarea><br><br>
-  <button type="submit">Send Message</button>
-</form>
+  <h2>Contact Me</h2>
+  <p>Use the form below to send a secure message. No spam, no leaks.</p>
 
-<style>
-  input, textarea {
-    width: 90%;
-    max-width: 500px;
-    padding: 0.7rem;
-    margin: 0.5rem 0;
-    border: none;
-    border-radius: 5px;
-  }
-  button {
-    padding: 0.7rem 1.5rem;
-    background: #00ffc3;
-    border: none;
-    color: #000;
-    font-weight: bold;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-</style>
+  <form action="https://formspree.io/f/xldnbpdg" method="POST">
+    <input type="text" name="name" placeholder="Your name" required><br>
+    <input type="email" name="email" placeholder="Your email" required><br>
+    <textarea name="message" placeholder="Your message" rows="5" required></textarea><br>
+    <button type="submit">Send Message</button>
+  </form>
 
 </body>
 </html>
+
