--- a/about.html
+++ b/about.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-<meta name="author" content="Kristopher McCoy">
-
-<meta property="og:title" content="IronDillo Cybersecurity">
-<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-<meta property="og:url" content="https://irondillo.com">
-<meta name="twitter:card" content="summary_large_image">
-
   <meta charset="UTF-8" />
   <title>About – IronDillo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
+  <!-- SEO Meta -->
+  <meta name="description" content="Learn more about IronDillo, a veteran-owned cybersecurity consultancy focused on clarity, resilience, and protection.">
+  <meta name="keywords" content="cybersecurity, veteran-owned, about, small business, IT security">
+  <meta name="author" content="Kristopher McCoy">
+
+  <!-- Social -->
+  <meta property="og:title" content="About IronDillo">
+  <meta property="og:description" content="Founded by a U.S. Army veteran, IronDillo offers expert cybersecurity guidance with integrity and care.">
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
+  <meta property="og:url" content="https://irondillo.com/about.html">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
-    @media (max-width: 600px) {
-  body {
-    padding: 1rem;
-  }
-  h1 {
-    font-size: 2rem;
-  }
-  nav a {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  img {
-    max-width: 100px;
-  }
-}
     body {
       background: #0e0e0e;
       color: #f4f4f4;
       font-family: Arial, sans-serif;
       padding: 2rem;
       text-align: center;
+    }
+    header img {
+      max-width: 150px;
+      height: auto;
     }
     h1 {
       color: #00ffc3;
@@ -47,19 +39,34 @@
       margin: 1rem auto;
       font-size: 1.1rem;
     }
+    nav {
+      background: #111;
+      padding: 1rem 0;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: #00ffc3;
+      text-decoration: none;
+    }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      nav a { display: block; margin: 0.5rem 0; }
+      header img { max-width: 100px; }
+    }
   </style>
 </head>
+
 <body>
 
-  <header style="text-align:center; padding:1rem;">
-  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
-</header>
+  <header>
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+  </header>
 
-  <nav style="background:#111;padding:1rem 0;">
-    <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
-    <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
-    <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
-    <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/services.html">Services</a>
+    <a href="/about.html">About</a>
+    <a href="/blog.html">Blog</a>
   </nav>
 
   <h1>About IronDillo</h1>
