--- a/services.html
+++ b/services.html
@@ -1,95 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-<meta name="author" content="Kristopher McCoy">
-
-<meta property="og:title" content="IronDillo Cybersecurity">
-<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-<meta property="og:url" content="https://irondillo.com">
-<meta name="twitter:card" content="summary_large_image">
-
   <meta charset="UTF-8" />
-  <title>About – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    @media (max-width: 600px) {
-  body {
-    padding: 1rem;
-  }
-  h1 {
-    font-size: 2rem;
-  }
-  nav a {
-    display: block;
-    margin: 0.5rem 0;
-  }
-  img {
-    max-width: 100px;
-  }
-}
-    body {
-      background: #0e0e0e;
-      color: #f4f4f4;
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      text-align: center;
-    }
-    h1 {
-      color: #00ffc3;
-      font-size: 2.5rem;
-    }
-    p {
-      max-width: 700px;
-      margin: 1rem auto;
-      font-size: 1.1rem;
-    }
-  </style>
-</head>
-<body>
-
-  <header style="text-align:center; padding:1rem;">
-  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
-</header>
-
-  <nav style="background:#111;padding:1rem 0;">
-    <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
-    <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
-    <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
-    <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
-  </nav>
-
-  <h1>About IronDillo</h1>
-
-  <p><strong>IronDillo</strong> is more than a brand—it's a mission. Founded by a U.S. Army veteran with a passion for cybersecurity, I created IronDillo to help individuals and small businesses stay safe in a complex digital world.</p>
-
-  <p>My goal is to translate technical know-how into real-world protection. Whether you're just getting started or looking to harden your existing systems, I offer straight answers, reliable service, and no fear tactics. Just solid, honest help.</p>
-
-  <p>The armadillo in the name isn't just a mascot—it's a symbol of defense, resilience, and navigating life with a strong shell and a clear purpose. That's what I aim to offer you and your systems, too.</p>
-
-  <p>Thanks for stopping by. If you're ready to roll forward with security, <a href="/services.html" style="color:#00ffc3;">let's talk</a>.</p>
-
-</body>
-</html>
-<meta name="description" content="IronDillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-<meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-<meta name="author" content="Kristopher McCoy">
-
-<meta property="og:title" content="IronDillo Cybersecurity">
-<meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-<meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-<meta property="og:url" content="https://irondillo.com">
-<meta name="twitter:card" content="summary_large_image">
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Services – IronDillo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+
+  <!-- SEO Meta -->
+  <meta name="description" content="Explore IronDillo's cybersecurity services, including diagnostics, consulting, and secure setup for individuals and small businesses.">
+  <meta name="keywords" content="cybersecurity services, small business security, technical writing, consulting, diagnostics">
+  <meta name="author" content="Kristopher McCoy">
+
+  <!-- Open Graph / Social -->
+  <meta property="og:title" content="IronDillo Cybersecurity Services">
+  <meta property="og:description" content="Explore the services IronDillo offers to help you build a safer digital space.">
+  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
+  <meta property="og:url" content="https://irondillo.com/services.html">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       background: #0e0e0e;
@@ -97,6 +25,10 @@
       font-family: Arial, sans-serif;
       padding: 2rem;
       text-align: center;
+    }
+    header img {
+      max-width: 150px;
+      height: auto;
     }
     h1 {
       color: #00ffc3;
@@ -109,33 +41,48 @@
       max-width: 700px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 255, 195, 0.1);
+      text-align: left;
     }
     .service h2 {
       color: #00ffc3;
     }
     .service p {
-      font-size: 1.05rem;
+      font-size: 1rem;
     }
     .cta a {
       color: #00ffc3;
       text-decoration: none;
       font-weight: bold;
     }
+    nav {
+      background: #111;
+      padding: 1rem 0;
+    }
+    nav a {
+      margin: 0 1rem;
+      color: #00ffc3;
+      text-decoration: none;
+    }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem; }
+      nav a { display: block; margin: 0.5rem 0; }
+      header img { max-width: 100px; }
+    }
   </style>
 </head>
+
 <body>
 
-  <header style="text-align:center; padding:1rem;">
-  <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo" style="max-width:150px; height:auto;">
-</header>
+  <header>
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+  </header>
 
-  <nav style="background:#111;padding:1rem 0;">
-  <a href="/index.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Home</a>
-  <a href="/services.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Services</a>
-  <a href="/about.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">About</a>
-  <a href="/blog.html" style="margin:0 1rem;color:#00ffc3;text-decoration:none;">Blog</a>
-</nav>
-
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/services.html">Services</a>
+    <a href="/about.html">About</a>
+    <a href="/blog.html">Blog</a>
+  </nav>
 
   <h1>Services</h1>
   <p>Helping individuals and small businesses stay secure, one step at a time.</p>
