--- a/services.html
+++ b/services.html
@@ -107,3 +107,10 @@
 
 </body>
 </html>
+
+<footer style="margin-top:3rem; padding:1rem; color:#888; font-size:0.9rem;">
+  &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+  <a href="/privacy.html" style="color:#00ffc3; text-decoration:none;">Privacy</a> | 
+  <a href="/terms.html" style="color:#00ffc3; text-decoration:none;">Terms</a> | 
+  <a href="/credits.html" style="color:#00ffc3; text-decoration:none;">Credits</a>
+</footer>
