--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Iron Dillo Cybersecurity</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
+<meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   
   <!-- SEO Meta -->
