--- a/services.html
+++ b/services.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Services – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Services – IronDillo Cybersecurity</title>
+<meta name="description" content="Explore IronDillo's consulting, diagnostics, and documentation services for personal and small business cybersecurity needs.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
   <!-- SEO Meta -->
