--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Blog – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>IronDillo Blog – Cyber Hygiene Tips & Updates</title>
+<meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety.">
+
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
   <!-- SEO Meta -->
