--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Privacy Policy – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here.">
+
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <style>
     body {
