--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Terms of Use – IronDillo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Understand the rules and disclaimers for using IronDillo's content, contact form, and services.">
+
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <style>
     body {
