--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>404 – Couldn't Find This Burrow</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>404 – Page Not Found | IronDillo</title>
+  <meta name="description" content="Uh-oh. This burrow doesn’t exist. Let’s get you back to safety.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
   <style>
