--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
 
   <header>
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo Logo">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo">
   </header>
 
   <nav>
