--- a/services.html
+++ b/services.html
@@ -105,6 +105,9 @@
     <p class="cta"><a href="https://ko-fi.com/kris98630" target="_blank">Quick Fix / Review →</a></p>
   </div>
 
+  <p>Curious how these services work in action? <a href="/blog.html">Visit the blog for real-world tips</a>.</p>
+
+
 </body>
 </html>
 
