--- a/about.html
+++ b/about.html
@@ -79,6 +79,9 @@
 
   <p>Thanks for stopping by. If you're ready to roll forward with security, <a href="/services.html" style="color:#00ffc3;">let's talk</a>.</p>
 
+  <p>Want to know what IronDillo can do for you? <a href="/services.html">Explore my services</a>.</p>
+
+  
 </body>
 </html>
 
