--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <title>About – Iron Dillo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/about.html" />
 
   <!-- SEO Meta -->
   <meta name="description" content="Learn more about IronDillo, a veteran-owned cybersecurity consultancy focused on clarity, resilience, and protection.">
