--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
   <title>IronDillo Blog – Cyber Hygiene Tips & Updates</title>
   <meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/blog.html" />
 
   <!-- SEO Meta -->
   <meta name="description" content="Read cybersecurity tips, updates, and advice from IronDillo. Learn how to protect your systems and stay safe online.">
