--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
   <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/index.html" />
   
   <!-- SEO Meta -->
   <meta name="description" content="Iron Dillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
