--- a/privacy.html
+++ b/privacy.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8" />
   <title>Privacy Policy – IronDillo</title>
   <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here.">
-
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/privacy.html" />
+
+  
   <style>
     body {
       background: #0e0e0e;
