--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
   <title>Services – IronDillo Cybersecurity</title>
   <meta name="description" content="Explore IronDillo's consulting, diagnostics, and documentation services for personal and small business cybersecurity needs.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/services.html" />
 
   <!-- SEO Meta -->
   <meta name="description" content="Explore IronDillo's cybersecurity services, including diagnostics, consulting, and secure setup for individuals and small businesses.">
