--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,9 @@
   <title>Terms of Use – IronDillo</title>
   <meta name="description" content="Understand the rules and disclaimers for using IronDillo's content, contact form, and services.">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="canonical" href="https://irondillo.com/terms.html" />
+  
+
   <style>
     body {
       background: #0e0e0e;
