--- a/services.html
+++ b/services.html
@@ -85,28 +85,35 @@
     <a href="/blog.html">Blog</a>
   </nav>
 
-  <h1>Services</h1>
-  <p>Helping individuals and small businesses stay secure, one step at a time.</p>
+ <h1>Services</h1>
+<p>Whether you’re running a nonprofit, a family business, or just trying to protect your digital life—I’m here to help you make sense of cybersecurity. IronDillo offers no-pressure, veteran-backed services tailored to real people and growing teams.</p>
 
-  <div class="service">
-    <h2>Cybersecurity Consulting</h2>
-    <p>Personalized guidance on securing your systems, avoiding threats, and understanding risk. Ideal for first-time site owners or small teams without a dedicated IT department.</p>
-    <p class="cta"><a href="https://fiverr.com/artilleryjoe" target="_blank">Start a Consultation →</a></p>
-  </div>
+<div class="service">
+  <h2>Cybersecurity Audit (Starter)</h2>
+  <p>A plain-English walkthrough of your current setup. No scare tactics—just what’s exposed, what’s fine, and what needs attention. Perfect for websites, small networks, and cloud-based businesses.</p>
+</div>
 
-  <div class="service">
-    <h2>Technical Documentation</h2>
-    <p>Need clear and concise how-tos, runbooks, or SOPs? I specialize in turning complex technical topics into readable, usable docs for teams or clients.</p>
-    <p class="cta"><a href="https://fiverr.com/artilleryjoe" target="_blank">Request Documentation Help →</a></p>
-  </div>
+<div class="service">
+  <h2>Employee Security Training</h2>
+  <p>Equip your team to spot phishing, social engineering, and weak links. Custom sessions available for remote teams, volunteers, or non-technical staff.</p>
+</div>
 
-  <div class="service">
-    <h2>Secure Setup & Diagnostics</h2>
-    <p>System acting up? Need help hardening your devices or reviewing configurations? I provide secure setups, basic audits, and actionable insights.</p>
-    <p class="cta"><a href="https://ko-fi.com/kris98630" target="_blank">Quick Fix / Review →</a></p>
-  </div>
+<div class="service">
+  <h2>Alert & Incident Translation</h2>
+  <p>Confused by a warning or suspicious email? I’ll break it down, explain the risk (if any), and advise your next move in clear terms.</p>
+</div>
 
-  <p>Curious how these services work in action? <a href="/blog.html">Visit the blog for real-world tips</a>.</p>
+<div class="service">
+  <h2>Light Touch Site Check</h2>
+  <p>I’ll run non-invasive testing of your contact forms, login screens, or public-facing pages to spot basic misconfigurations or leaks.</p>
+</div>
+
+<div class="service">
+  <h2>Add-On: Documentation Help</h2>
+  <p>If you need a privacy policy, terms of use, or a short “security practices” page for clients, I offer lean, readable copy built from your actual practices.</p>
+</div>
+
+<p>Ready to get started? Use the secure form below or reach out via <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a>. Every job starts with a no-obligation conversation. I don’t upsell—I explain and assist.</p>
 
 
 </body>
