--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>IronDillo Blog – Cyber Hygiene Tips & Updates</title>
   <meta name="description" content="Cybersecurity guidance, threat breakdowns, and plain-English advice for real-world digital safety.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/blog.html" />
 
