--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
   <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/index.html" />
   
