--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Privacy Policy – IronDillo</title>
   <meta name="description" content="IronDillo respects your privacy—no cookies, no tracking, no nonsense. Read our full policy here.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/privacy.html" />
 
