--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Services – IronDillo Cybersecurity</title>
   <meta name="description" content="Explore IronDillo's consulting, diagnostics, and documentation services for personal and small business cybersecurity needs.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/services.html" />
 
