--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Terms of Use – IronDillo</title>
   <meta name="description" content="Understand the rules and disclaimers for using IronDillo's content, contact form, and services.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
   <link rel="canonical" href="https://irondillo.com/terms.html" />
   
