--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
 
   <header>
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" width="150" height="150">
   </header>
 
   <nav>
