--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/index.html" />
+  <link rel="canonical" href="https://irondillo.com/" />
   
   <!-- SEO Meta -->
   <meta name="description" content="Iron Dillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
