--- a/index.html
+++ b/index.html
@@ -1,144 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>IronDillo Cybersecurity – Veteran-Owned Online Protection</title>
-  <meta name="description" content="Cybersecurity services built for real people and small businesses. Veteran-owned, trustworthy, and hands-on digital safety expertise.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-  <link rel="canonical" href="https://irondillo.com/index.html" />
-  
-  <!-- SEO Meta -->
-  <meta name="description" content="Iron Dillo is a veteran-owned cybersecurity consultancy helping individuals and small businesses stay safe online.">
-  <meta name="keywords" content="cybersecurity, veteran-owned, small business security, digital safety, consulting, documentation">
-  <meta name="author" content="Kristopher McCoy">
-
-  <!-- Open Graph / Social -->
-  <meta property="og:title" content="Iron Dillo Cybersecurity">
-  <meta property="og:description" content="Veteran-owned cybersecurity guidance with clarity and care.">
-  <meta property="og:image" content="https://irondillo.com/assets/irondillo-preview.jpg">
-  <meta property="og:url" content="https://irondillo.com">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <style>
-    body {
-      background-color: #0e0e0e;
-      color: #f4f4f4;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 2rem;
-    }
-    header img {
-      max-width: 150px;
-      height: auto;
-    }
-    h1 {
-      font-size: 3rem;
-      color: #00ffc3;
-    }
-    h2 {
-      color: #ccc;
-      margin-top: -1rem;
-      font-weight: 400;
-    }
-    p {
-      max-width: 700px;
-      margin: 1rem auto;
-      font-size: 1.1rem;
-    }
-    .links a {
-      margin: 0 1rem;
-      color: #00ffc3;
-      text-decoration: none;
-    }
-    .cta {
-      margin-top: 2rem;
-      font-weight: bold;
-    }
-    nav {
-      background: #111;
-      padding: 1rem 0;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: #00ffc3;
-      text-decoration: none;
-    }
-    input, textarea {
-      width: 90%;
-      max-width: 500px;
-      padding: 0.7rem;
-      margin: 0.5rem 0;
-      border: none;
-      border-radius: 5px;
-    }
-    button {
-      padding: 0.7rem 1.5rem;
-      background: #00ffc3;
-      border: none;
-      color: #000;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    @media (max-width: 600px) {
-      h1 { font-size: 2rem; }
-      nav a { display: block; margin: 0.5rem 0; }
-      header img { max-width: 100px; }
-    }
-  </style>
-</head>
-
-<body>
-
-  <header>
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity armadillo logo" width="150" height="150">
-  </header>
-
-  <nav>
-    <a href="/index.html">Home</a>
-    <a href="/services.html">Services</a>
-    <a href="/about.html">About</a>
-    <a href="/blog.html">Blog</a>
-  </nav>
-
-  <h1>Iron Dillo Cybersecurity</h1>
-  <h2>Digital Defense with Texas Grit</h2>
-
-  <p>Welcome to Iron Dillo! Your veteran-owned partner in digital security. I help individuals and small businesses stay safe online through diagnostics, documentation, and hands-on support.</p>
-
-  <p>Whether you're securing your first website or assessing for vulnerabilities, Iron Dillo brings expert guidance with integrity, clarity, and care. Veteran-owned, mission-driven, and here to help you build safer digital ground.</p>
-
-  <div class="links">
-    <a href="https://www.fiverr.com/artilleryjoe" target="_blank">Fiverr</a>
-    <a href="https://ko-fi.com/kris98630" target="_blank">Ko-fi</a>
-    <a href="https://github.com/Artilleryjoe" target="_blank">GitHub</a>
+<header class="bg-white shadow p-8">
+  <div class="max-w-5xl mx-auto text-center">
+    <h1 class="text-4xl font-extrabold leading-tight">
+      Cybersecurity Support for Small Teams, Creators, and Independent Professionals
+    </h1>
+    <p class="mt-4 text-lg text-gray-700 max-w-3xl mx-auto">
+      Get clear, ethical help from a U.S. Army veteran and cybersecurity specialist with real-world experience.
+    </p>
   </div>
+</header>
 
-  <div class="cta">
-    <p>🔒 Currently accepting new clients.<br>Get in touch or request a quote via Fiverr or Ko-fi.</p>
+<section id="services" class="max-w-5xl mx-auto mt-12 px-6">
+  <h2 class="text-3xl font-semibold border-b-2 border-gray-300 pb-3 mb-8 text-center">
+    Services I Offer
+  </h2>
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+    <div class="bg-white rounded-lg shadow p-6">
+      <h3 class="text-xl font-semibold mb-2">Security Consultations & Risk Assessments</h3>
+      <p>Identify vulnerabilities, explain threats in plain English, and provide actionable steps to harden your systems.</p>
+    </div>
+    <div class="bg-white rounded-lg shadow p-6">
+      <h3 class="text-xl font-semibold mb-2">Policy & Documentation Support</h3>
+      <p>Cybersecurity policies, SOPs, and incident response plans tailored for your operations.</p>
+    </div>
+    <div class="bg-white rounded-lg shadow p-6">
+      <h3 class="text-xl font-semibold mb-2">Web Presence Security Checkups</h3>
+      <p>Audits for websites, forms, and public-facing content to catch XSS, misconfigurations, and other risks.</p>
+    </div>
+    <div class="bg-white rounded-lg shadow p-6">
+      <h3 class="text-xl font-semibold mb-2">Training & Awareness</h3>
+      <p>One-on-one or small group sessions on phishing prevention, password safety, and operational security basics.</p>
+    </div>
   </div>
-
-  <hr style="margin: 3rem 0;">
-
-  <h2>Contact Me</h2>
-  <p>Use the form below to send a secure message. No spam, no leaks.</p>
-
-  <form action="https://formspree.io/f/xldnbpdg" method="POST">
-    <input type="text" name="name" placeholder="Your name" required><br>
-    <input type="email" name="email" placeholder="Your email" required><br>
-    <textarea name="message" placeholder="Your message" rows="5" required></textarea><br>
-    
-    <input type="text" name="website" style="display:none">
-    
-    <button type="submit">Send Message</button>
-  </form>
-
-</body>
-</html>
-
-<footer style="margin-top:3rem; padding:1rem; color:#888; font-size:0.9rem;">
-  &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
-  <a href="/privacy.html" style="color:#00ffc3; text-decoration:none;">Privacy</a> | 
-  <a href="/terms.html" style="color:#00ffc3; text-decoration:none;">Terms</a> | 
-</footer>
+</section>
